@startuml

title __DEMO's Class Diagram__\n

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.Car {
        {static} - currentYear : int
        - make : String
        {static} - maxPrice : double
        - mileage : int
        {static} - minPrice : double
        {static} - minYear : int
        - model : String
        - price : double
        - year : int
        + Car()
        + Car()
        + Car()
        + Car()
        + equals()
        + getMake()
        + getMileage()
        + getModel()
        + getPrice()
        + getYear()
        + hashCode()
        + parse()
        + setMileage()
        + setPrice()
        + toString()
        - validate()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.Car.Builder {
        {static} - MODELS : String[][]
        {static} - RANDOM : Random
        - make : String
        - mileage : int
        - model : String
        - price : double
        - year : int
        + build()
        + buildRandom()
        + make()
        + mileage()
        + model()
        + price()
        + year()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.CarsGenerator {
        {static} - ID_CODE : String
        - cars : Car[]
        - currentCarIdIndex : int
        - currentCarIndex : int
        - keys : String[]
        {static} - serNr : int
        {static} + generateShuffleCars()
        + generateShuffleCarsAndIds()
        {static} + generateShuffleIds()
        + getCar()
        + getCarId()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.DemoExecution {
        {static} + main()
        + start()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.ManualTest {
        {static} + executeTest()
        {static} + main()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.SimpleBenchmark {
        {static} + FINISH_COMMAND : String
        - BENCHMARK_NAMES : String[]
        - COUNTS : int[]
        {static} - MESSAGES : ResourceBundle
        - carsMap : ParsableMap<String, Car>
        - carsMap2 : ParsableMap<String, Car>
        - chainsSizes : Queue<String>
        + SimpleBenchmark()
        + SimpleBenchmark()
        + benchmark()
        {static} + executeTest()
        {static} + main()
        + startBenchmark()
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.Timekeeper {
        - header : String
        - kiekioFormatas : String
        - kiekioInd : int
        - kiekioN : int
        - laikai : double[][]
        - resultsLogger : BlockingQueue<String>
        - semaphore : Semaphore
        - startTime : long
        - startTimeTot : long
        - sumTime : double
        - tyrimoImtis : int[]
        - tyrimoInd : int
        - tyrimøEilutë : String
        - tyrimøN : int
        - tyrimøNmax : int
        + Timekeeper()
        + Timekeeper()
        + finish()
        + logResult()
        + seriesFinish()
        + start()
        + startAfterPause()
        - summary()
    }
  }
  

  edu.ktu.ds.lab3.demo.Car .up.|> edu.ktu.ds.lab3.utils.Parsable
  edu.ktu.ds.lab3.demo.Car +-down- edu.ktu.ds.lab3.demo.Car.Builder
  edu.ktu.ds.lab3.demo.DemoExecution -up-|> javafx.application.Application
  edu.ktu.ds.lab3.demo.SimpleBenchmark o-- edu.ktu.ds.lab3.demo.Timekeeper : timekeeper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
